adding registration and login check

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -90,6 +90,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -106,6 +107,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberPassword"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,6 +124,7 @@
         android:layout_marginEnd="15dp"
         android:textSize="18sp"
         android:padding="15dp"
+        android:checked="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
