need to fix cart adapter item & price

--- a/app/src/main/res/layout/spliff_item.xml
+++ b/app/src/main/res/layout/spliff_item.xml
@@ -74,7 +74,7 @@
             android:layout_height="wrap_content"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login"
+            android:id="@+id/add"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintEnd_toEndOf="parent"
