--- a/app/src/main/res/layout/fragment_flowers.xml
+++ b/app/src/main/res/layout/fragment_flowers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.FlowersFragment">
 
@@ -19,7 +19,7 @@
         android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="30dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
