--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -29,5 +29,11 @@
 
     <item
         android:id="@+id/logout"
+        android:visible="true"
         android:title="Log Out" />
+
+    <item
+        android:id="@+id/login"
+        android:title="Login"
+        android:visible="false"/>
 </menu>
