--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -24,10 +24,17 @@
         android:title="Flowers" />
 
     <item
-        android:id="@+id/accessories"
-        android:title="Accessories" />
+        android:id="@+id/profile"
+        android:title="Profile" />
 
     <item
         android:id="@+id/logout"
+        android:visible="true"
         android:title="Log Out" />
+
+    <item
+        android:id="@+id/login"
+        android:title="Login"
+        android:visible="false"/>
+
 </menu>
